get and search customer
